# ultraviolet

./: .gitattributes  .gitignore  AGENTS.md  CompilerRebuildPlan.md  LICENSE.md  README.md  SPECIFICATION.md  Ultraviolet.toml
LLVMBootstrap/Ultraviolet/: CMakeLists.txt  CMakePresets.json
LLVMBootstrap/Ultraviolet/include/00_core/: build_log_policy.h  compiler_support.h  diagnostic_messages.h  diagnostics.h  hash.h  host_primitives.h  int128.h  keywords.h  path.h  process_config.h  source_load.h  source_text.h
LLVMBootstrap/Ultraviolet/include/00_core/host/: services.h
LLVMBootstrap/Ultraviolet/include/01_project/: link.h  llvm_toolchain.h  manifest.h  module_discovery.h  outputs.h  project.h  target_profile.h  tool_resolution.h
LLVMBootstrap/Ultraviolet/include/02_source/: lexer.h  module_paths.h
LLVMBootstrap/Ultraviolet/include/02_source/ast/: ast.h  ast_builder.h  ast_common.h  ast_utils.h
LLVMBootstrap/Ultraviolet/include/02_source/attributes/: attribute_registry.h
LLVMBootstrap/Ultraviolet/include/02_source/lexer/: keyword_policy.h  lexer.h
LLVMBootstrap/Ultraviolet/include/02_source/parser/: parse_modules.h
LLVMBootstrap/Ultraviolet/include/04_analysis/attributes/: ffi_library_attrs.h
LLVMBootstrap/Ultraviolet/include/04_analysis/caps/: cap_comptime.h
LLVMBootstrap/Ultraviolet/include/04_analysis/composite/: classes.h  enums.h  records.h  unions.h
LLVMBootstrap/Ultraviolet/include/06_driver/: codegen_cache.h  compiler_main.h  fingerprints.h  options.h  version.h
LLVMBootstrap/Ultraviolet/runtime/: CMakeLists.txt
LLVMBootstrap/Ultraviolet/runtime/cmake/: stage_windows_runtime.cmake
LLVMBootstrap/Ultraviolet/runtime/tests/: task070_region_runtime.c  task104_spec_trace_runtime.c
LLVMBootstrap/Ultraviolet/src/00_core/: compiler_support.cpp  diagnostic_messages.cpp  diagnostic_messages_table.inc  host_primitives.cpp  numeric_literals.cpp  source_load.cpp  span.cpp  terminal.cpp
LLVMBootstrap/Ultraviolet/src/01_project/: deterministic_order.cpp  ffi_library.cpp  language_profile.cpp  load_project.cpp  outputs.cpp
LLVMBootstrap/Ultraviolet/src/03_comptime/: common.cpp  derive.cpp  eval.cpp  files.cpp  pass.cpp
LLVMBootstrap/Ultraviolet/src/06_driver/: comptime_options.cpp  fingerprints.cpp  incremental.cpp  main.cpp  options.cpp  output_pipeline.cpp  pipeline.cpp
LLVMBootstrap/Ultraviolet/src/tests/: codegen_abi_sret_test.cpp  codegen_diagnostic_path_test.cpp  lexer_diagnostics_test.cpp  parser_terminator_diagnostics_test.cpp  parser_token_consumption_test.cpp  resolver_binary_chain_conformance_test.cpp  resolver_name_reuse_diagnostics_test.cpp
LLVMBootstrap/Ultraviolet/tools/: generate_diagnostic_registry.py  generate_static_rule_registry.py  validate_ast_phase_coverage.py  validate_diagnostic_spec_sync.py  validate_phase_includes.py
LLVMBootstrap/cursive/: CMakeLists.txt  CMakePresets.json
LLVMBootstrap/cursive/include/00_core/: assert_spec.h  behavior_model.h  build_log_policy.h  compiler_support.h  crash_debug.h  diagnostic_codes.h  diagnostic_messages.h  diagnostic_render.h  diagnostics.h  hash.h  host_primitives.h  ident.h  int128.h  keywords.h  numeric_literals.h  path.h  process_config.h  runtime_abi.h  source_load.h  source_text.h  span.h  spec_trace.h  symbols.h  terminal.h  unicode.h
LLVMBootstrap/cursive/include/01_project/: assemblies.h  compiler_support_paths.h  deterministic_order.h  ffi_library.h  ir_assembly.h  language_profile.h  link.h  llvm_toolchain.h  manifest.h  module_discovery.h  outputs.h  project.h  target_profile.h  tool_resolution.h
LLVMBootstrap/cursive/include/02_source/: module_paths.h  token.h
LLVMBootstrap/cursive/include/03_comptime/: comptime.h  comptime_internal.h
LLVMBootstrap/cursive/include/06_driver/: cli.h  codegen_cache.h  compiler_main.h  comptime_options.h  fingerprints.h  incremental.h  incremental_state.h  options.h  output_pipeline.h  pipeline.h  shared_library_exports.h  version.h
LLVMBootstrap/cursive/runtime/: CMakeLists.txt
LLVMBootstrap/cursive/runtime/include/: cursive_rt.h  cursive_rt_language_symbols.h
LLVMBootstrap/cursive/runtime/tests/: task070_region_runtime.c  task075_filesystem_runtime.c  task104_spec_trace_runtime.c
LLVMBootstrap/cursive/src/: CMakeLists.txt
LLVMBootstrap/cursive/src/00_core/: behavior_model.cpp  build_log_policy.cpp  compiler_support.cpp  diagnostic_codes.cpp  diagnostic_messages.cpp  diagnostic_messages_table.inc  diagnostic_render.cpp  diagnostics.cpp  hash.cpp  host_primitives.cpp  ident.cpp  numeric_literals.cpp  path.cpp  process_config.cpp  runtime_abi.cpp  source_load.cpp  span.cpp  spec_trace.cpp  symbols.cpp  terminal.cpp  unicode.cpp
LLVMBootstrap/cursive/src/01_project/: assemblies.cpp  compiler_support_paths.cpp  deterministic_order.cpp  ffi_library.cpp  ir_assembly.cpp  language_profile.cpp  link.cpp  load_project.cpp  manifest.cpp  module_discovery.cpp  outputs.cpp  project_validate.cpp  target_profile.cpp  tool_resolution.cpp
LLVMBootstrap/cursive/src/02_source/: module_paths.cpp
LLVMBootstrap/cursive/src/03_comptime/: common.cpp  derive.cpp  eval.cpp  files.cpp  hygiene.cpp  pass.cpp  quote.cpp  reflect.cpp  rewrite.cpp
LLVMBootstrap/cursive/src/06_driver/: cli.cpp  compiler_main.cpp  comptime_options.cpp  debugger_main.cpp  fingerprints.cpp  incremental.cpp  main.cpp  options.cpp  output_pipeline.cpp  pipeline.cpp  shared_library_exports.cpp  version.cpp
LLVMBootstrap/cursive/src/tests/: codegen_abi_sret_test.cpp  codegen_diagnostic_path_test.cpp  comptime_conformance_test.cpp  if_is_type_test_diagnostics_test.cpp  lexer_diagnostics_test.cpp  parser_generic_conformance_test.cpp  parser_terminator_diagnostics_test.cpp  parser_token_consumption_test.cpp  project_manifest_validation_test.cpp  reserved_identifier_diagnostics_test.cpp  resolver_binary_chain_conformance_test.cpp  resolver_name_reuse_diagnostics_test.cpp
LLVMBootstrap/cursive/tools/: generate_diagnostic_registry.py  generate_static_rule_registry.py  resolve_spec_path.py  static_rule_mapping.json  validate_diagnostic_spec_sync.py
(+4493 files in other folders)
